# lroche

./: .gitignore  Cargo.toml  README.md  README.rst  pyproject.toml
src/: binary_model.rs  comp_gravity.rs  comp_light.rs  comp_radius.rs  constants.rs  ginterp.rs  ldc.rs  lib.rs  model.rs  numface.rs  pparam.rs  roche.rs  set_bright_spot_grid.rs  set_disc_continuum.rs  set_disc_grid.rs  set_star_continuum.rs  set_star_grid.rs
