[package]
name = "lroche"
version = "0.2.1"
edition = "2024"

[lib]
name = "lroche"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
bulirsch = "0.1.12"
numpy = "0.28.0"
rayon = "1.10"
rust-roche = "0.1.3"

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py38"]

[profile.release]
debug=true